@@ -39,9 +39,6 @@ FOREACH(exe j2k_to_image image_to_j2k j2k_dump)
   TARGET_LINK_LIBRARIES(${exe} ${OPENJPEG_LIBRARY_NAME} 
 ${Z_LIBNAME} ${PNG_LIBNAME} ${TIFF_LIBNAME} ${LCMS_LIBNAME} )
 
-  ADD_TEST(${exe} ${EXECUTABLE_OUTPUT_PATH}/${exe})
-  # calling those exe without option will make them fail always:
-  SET_TESTS_PROPERTIES(${exe} PROPERTIES WILL_FAIL TRUE)
   # On unix you need to link to the math library:
   IF(UNIX)
     TARGET_LINK_LIBRARIES(${exe} m)
@@ -100,39 +97,3 @@ IF(BUILD_JPWL)
     DESTINATION ${OPENJPEG_INSTALL_BIN_DIR} COMPONENT Applications
   )
 ENDIF(BUILD_JPWL)
-
-#if(BUILD_TESTING)
-## Do testing here, once we know the examples are being built:
-#FILE(GLOB_RECURSE OPENJPEG_DATA_IMAGES_GLOB
-#  "${JPEG2000_CONFORMANCE_DATA_ROOT}/*.j2k"
-#  "${JPEG2000_CONFORMANCE_DATA_ROOT}/*.j2c"
-#  "${JPEG2000_CONFORMANCE_DATA_ROOT}/*.jp2"
-#  )
-
-#foreach(filename ${OPENJPEG_DATA_IMAGES_GLOB})
-#  get_filename_component(filename_temp ${filename} NAME)
-#  get_filename_component(filename_ext ${filename} EXT)
-#  execute_process(COMMAND ${EXECUTABLE_OUTPUT_PATH}/j2k_dump -i ${filename}
-#    OUTPUT_VARIABLE dump_success
-#    OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${filename_temp}.dump
-#    ERROR_QUIET
-#  )
-#  if(dump_success)
-#  file(READ ${CMAKE_CURRENT_BINARY_DIR}/${filename_temp}.dump numcomp_file)
-#  string(REGEX REPLACE ".*numcomps=([0-9]+).*" "\\1"
-#    numcomps "${numcomp_file}")
-#  #message( "found:${output_variable} for ${filename_temp}" )
-#  endif()
-#  ADD_TEST(dump-${filename_temp} ${EXECUTABLE_OUTPUT_PATH}/j2k_dump -i ${filename})
-#  foreach(codec_type ppm pgx bmp tif raw tga png)
-#    ADD_TEST(j2i-${filename_temp}-${codec_type} ${EXECUTABLE_OUTPUT_PATH}/j2k_to_image -i ${filename} -o ${filename_temp}.${codec_type})
-#  endforeach(codec_type)
-#  foreach(codec_type ppm bmp tif tga png)
-#    ADD_TEST(i2j-${filename_temp}-${codec_type} ${EXECUTABLE_OUTPUT_PATH}/image_to_j2k -i ${filename_temp}.${codec_type} -o ${filename_temp}.${codec_type}${filename_ext})
-#    SET_TESTS_PROPERTIES(i2j-${filename_temp}-${codec_type} PROPERTIES DEPENDS j2i-${filename_temp}-${codec_type})
-#    #if(UNIX)
-#    #  ADD_TEST(cmp-${filename_temp}-${codec_type} cmp ${filename} ${filename_temp}.${codec_type}${filename_ext})
-#    #endif(UNIX)
-#  endforeach(codec_type)
-#endforeach(filename)
-#endif(BUILD_TESTING)
